--- a/service_pages/hauling.html
+++ b/service_pages/hauling.html
@@ -91,6 +91,7 @@
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
   
 </body>
 </html>
