--- a/service_pages/hoarder_cleanout.html
+++ b/service_pages/hoarder_cleanout.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Hoarder Cleanout</h1>
     <p>Compassionate, discreet, and thorough removal for hoarding situations.</p>
-    <p class="rate-banner">Priced by truckload. Hoarder cleanouts usually require multiple loads. Pricing starts at $1,500+.</p>
+    <p class="rate-banner">Pricing starts at $1,500+(50% deposit fee). Hoarder cleanouts usually require multiple loads. Final price depends on volume. </p>
   </header>
 
   <div id="form-container">
@@ -72,7 +72,7 @@
       <ul style="margin:.5rem 0 0 1rem;">
       <li>On-site estimate required before work begins.</li>
       <li>Heavy debris and hazardous materials quoted separately.</li>
-      <li>Additional labor may apply (+$50/hr per worker).</li>
+      <li>Additional labor may apply (+$50/hr extra labor).</li>
       </ul>
     </section>
 
@@ -91,8 +91,9 @@
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
-  <script src="/service_js/cost-caculator.js"></script>
+  <script src="/service_js/clj-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
 </body>
 </html>
