--- a/service_pages/appliance.html
+++ b/service_pages/appliance.html
@@ -122,6 +122,7 @@
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
  
 
