--- a/service_pages/basement_cleanout.html
+++ b/service_pages/basement_cleanout.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Basement Cleanout</h1>
     <p>Clear out stored items, old furniture, and junk — flood or mold-aware handling on request.</p>
-    <p class="rate-banner">Priced by truckload. Basements may require extra labor for heavy items or stairs (+$50/hr per worker)</p>
+    <p class="rate-banner">Priced by truckload (50% deposit fee). Basements may require extra labor for heavy items or stairs (+$50/hr extra labor)</p>
   </header>
 
   <div id="form-container">
@@ -43,11 +43,11 @@
       <label for="volume">Approximate Truckload:</label>
      <select id="volume" name="volume">
      <option value="">Select one</option>
-     <option value="few">Few Items — $150–$200</option>
-     <option value="quarter">1/4 Truck — $250–$300</option>
-     <option value="half">1/2 Truck — $400–$500</option>
-     <option value="three-quarter">3/4 Truck — $550–$650</option>
-     <option value="full">Full Truck — $700–$850+</option>
+     <option value="few">Few Items — $150</option>
+     <option value="quarter">1/4 Truck — $300</option>
+     <option value="half">1/2 Truck — $500</option>
+     <option value="three-quarter">3/4 Truck — $650</option>
+     <option value="full">Full Truck — $850+</option>
      </select>
      <br><br>
 
@@ -89,8 +89,9 @@
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
-  <script src="/service_js/cost-caculator.js"></script>
+  <script src="/service_js/clj-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
 </body>
 </html>
