--- a/service_pages/estate_cleanout.html
+++ b/service_pages/estate_cleanout.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Full Estate Cleanout</h1>
     <p>Complete property clearing: furniture, appliances, and contents — donation and disposal handled.</p>
-    <p class="rate-banner">Priced by truckload. Hoarder cleanouts usually require multiple loads. Pricing starts at $1,500+.</p>
+    <p class="rate-banner">Pricing starts at $1,500+(50% deposit fee). Full Estate cleanouts usually require multiple loads. Final price depends on volume.</p>
   </header>
 
   <div id="form-container">
@@ -67,7 +67,7 @@
       <ul style="margin:.5rem 0 0 1rem;">
       <li>On-site estimate required before work begins.</li>
       <li>Heavy debris and hazardous materials quoted separately.</li>
-      <li>Additional labor may apply (+$50/hr per worker).</li>
+      <li>Additional labor may apply (+$50/hr extra labor).</li>
       </ul>
     </section>
 
@@ -86,8 +86,9 @@
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
-  <script src="/service_js/cost-caculator.js"></script>
+  <script src="/service_js/clj-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
 </body>
 </html>
