--- a/service_pages/event_equipment.html
+++ b/service_pages/event_equipment.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Event &amp; Equipment Delivery</h1>
     <p>Timed pickups/drop-offs, staging, and coordinated logistics for events, trade shows, and rentals.</p>
-    <p class="rate-banner">Starting at $150/hr (2.5-hour minimum)</p>
+    <p class="rate-banner">Starting at $175/hr (2.5-hour minimum)</p>
   </header>
 
   <div id="form-container">
@@ -76,6 +76,7 @@
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
 </body>
 </html>
