--- a/service_pages/furniture_assembly.html
+++ b/service_pages/furniture_assembly.html
@@ -45,14 +45,9 @@
       
       <h3>Item Quantities & Prices</h3>
 
-      <label for="small-items">Small Items $70 each : (chairs, nightstands, side tables, lamps, stools, etcs.)</label>
-      <input type="number" id="small-items" name="small-items" min="0" value="0"><br><br>
-
-      <label for="medium-items">Medium Items ($120) each: (desks,dressers, tv stands, bookshelves, etc.) </label>
-      <input type="number" id="medium-items" name="medium-items" min="0" value="0"><br><br>
-
-      <label for="large-items">Large Items ($200) each : (beds, wardrobes. sectionals, bunk beds, closets, etc.)</label>
-      <input type="number" id="large-items" name="large-items" min="0" value="0"><br><br>
+<label>Small items ($70):  <input type="number" id="fa-small"  name="fa-small"  min="0" value="0"></label><br>
+<label>Medium items ($120):<input type="number" id="fa-medium" name="fa-medium" min="0" value="0"></label><br>
+<label>Large items ($200): <input type="number" id="fa-large"  name="fa-large"  min="0" value="0"></label><br>
 
       <label for="notes">Notes:</label>
       <textarea id="notes" name="notes" placeholder="Room location, stairs/elevator, parking, fragile surfaces, etc."></textarea><br><br>
@@ -83,8 +78,9 @@
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
-  <script src="/service_js/cost-caculator.js"></script>
+  <script src="/service_js/fa-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
 </body>
 </html>
