--- a/service_pages/renovation_debris.html
+++ b/service_pages/renovation_debris.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Renovation Debris Removal</h1>
     <p>Drywall, wood, tile, and remodeling debris hauled away safely.</p>
-    <p class="rate-banner">Priced by truckload. Heavy debris surcharge applies for drywall, tile, roofing, or wood (+$100–$200).</p>
+    <p class="rate-banner">Priced by truckload (50% deposit fee). Heavy debris surcharge applies for drywall, tile, roofing, or wood (+$200).</p>
   </header>
 
   <div id="form-container">
@@ -52,11 +52,11 @@
       <label for="volume">Approximate Truckload:</label>
      <select id="volume" name="volume">
      <option value="">Select one</option>
-     <option value="few">Few Items — $150–$200</option>
-     <option value="quarter">1/4 Truck — $250–$300</option>
-     <option value="half">1/2 Truck — $400–$500</option>
-     <option value="three-quarter">3/4 Truck — $550–$650</option>
-     <option value="full">Full Truck — $700–$850+</option>
+     <option value="few">Few Items — $150</option>
+     <option value="quarter">1/4 Truck — $300</option>
+     <option value="half">1/2 Truck — $500</option>
+     <option value="three-quarter">3/4 Truck — $650</option>
+     <option value="full">Full Truck — $850+</option>
      </select>
      <br><br>
 
@@ -89,8 +89,9 @@
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
-  <script src="/service_js/cost-caculator.js"></script>
+  <script src="/service_js/clj-caculator.js"></script>
   <script src="/service_js/bridge.js"></script>
+  <script src="/service_js/description.js"></script>
 
 </body>
 </html>
